--- a/project.config.json
+++ b/project.config.json
@@ -24,13 +24,24 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 8,
+			"list": [
+				{
+					"id": 0,
+					"name": "filterbar",
+					"pathName": "pages/ask/score",
+					"query": ""
+				}
+			]
 		}
 	}
 }
